# fitbit-grabber-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: activities.rs  body.rs  date.rs  errors.rs  lib.rs  main.rs  query.rs  serializers.rs  user.rs
