[package]
authors = ["Bradford D. Boyle <bradford.d.boyle@gmail.com>"]
autobins = false
license = "Apache-2.0"
name = "fitbit"
version = "0.1.0"

[dependencies]
chrono = "0.4"
clap = "2.31"
env_logger = "0.5"
failure = "0.1.1"
log = "0.4"
oauth2 = "1.3"
reqwest = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tiny_http = "0.6"
toml = "0.4.6"
url = "1.7"

[lib]
name = "fitbit"

[[bin]]
name = "fitbit-grabber"
path = "src/bin/main.rs"
